# Snake-Bakcyl

./: CMakeLists.txt  Coord.cpp  Snake  main.cpp
Include/: Board.hpp  Coord.hpp  Snake.hpp
Source/: Board.cpp  CMakeLists.txt  Snake.cpp
